# rust-vs-js

./: .gitignore  LICENSE  README.md
frontend/: index.html
frontend/src/: App.module.css  App.tsx
frontend/src/components/: test.tsx
frontend/src/fetching-context/: index.tsx
js-backend/: index.ts  package.json  tsconfig.json
rs-backend/: Cargo.toml
rs-backend/src/: main.rs
