[package]
name = "rs-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4"] }
warp = "0.3.5"
